--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,8 +129,8 @@ h6 {
   align-items: center;
   justify-content: space-between;
   padding: 10px 0 10px 30px;
-  font-size: 15px;
-  font-weight: 500;
+  font-size: 18px;
+  font-weight: 600;
   color: #fff;
   white-space: nowrap;
   transition: 0.3s;
@@ -290,6 +290,41 @@ h6 {
   color: orange;
 }
 
+.navbar-mobile .dropdown ul {
+  position: static;
+  display: none;
+  margin: 10px 20px;
+  padding: 10px 0;
+  z-index: 99;
+  opacity: 1;
+  visibility: visible;
+  background: #000;
+  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+}
+
+.navbar-mobile .dropdown ul li {
+  min-width: 200px;
+}
+
+.navbar-mobile .dropdown ul a {
+  padding: 10px 20px;
+}
+
+
+.navbar-mobile .dropdown ul a i {
+  font-size: 12px;
+}
+
+.navbar-mobile .dropdown ul a:hover,
+.navbar-mobile .dropdown ul .active:hover,
+.navbar-mobile .dropdown ul li:hover>a {
+  color: orange;
+}
+
+.navbar-mobile .dropdown>.dropdown-active {
+  display: block;
+  visibility: visible !important;
+}
 
 /*--------------------------------------------------------------
 # Hero Section
@@ -300,12 +335,6 @@ h6 {
   
   background-image: url("../img/service/home1.jpeg");
   /* background: white #37517e; */
-}
-
-#carouselExampleAutoplaying {
-  padding: 20px;
-  width: 100%;
-  height: 80vh;
 }
 
 #hero .container {
@@ -499,7 +528,7 @@ section {
   transition: all 0.4s ease-in-out;
   display: inline-block;
   padding: 15px 0;
-  filter: grayscale(100);
+  /* filter: grayscale(100); */
 }
 
 .clients img:hover {
