--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,12 +298,13 @@ h6 {
   z-index: 99;
   opacity: 1;
   visibility: visible;
-  background: #000;
+  background: #fff;
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
 }
 
 .navbar-mobile .dropdown ul li {
   min-width: 200px;
+  
 }
 
 .navbar-mobile .dropdown ul a {
@@ -313,6 +314,11 @@ h6 {
 
 .navbar-mobile .dropdown ul a i {
   font-size: 12px;
+  
+}
+
+.navbar-mobile .dropdown ul li a {
+  color: #000;
 }
 
 .navbar-mobile .dropdown ul a:hover,
@@ -342,11 +348,17 @@ h6 {
 }
 
 #hero h1 {
-  margin: 0 0 5px 50px;
-  font-size: 40px;
+  margin: 0 0 0 0;
+  padding: 10px;
+  font-size: 65px;
   font-weight: 700;
-  line-height: 56px;
+  line-height: 60px;
   color: #fff;
+}
+
+#hero .title {
+  text-align: center;
+  justify-content: center;
 }
 
 #hero h2 {
@@ -422,6 +434,9 @@ h6 {
   #hero .hero-img img {
     width: 50%;
   }
+  h2 {
+    font-size: 25;
+  }
 }
 
 @media (max-width: 768px) {
@@ -438,6 +453,10 @@ h6 {
 
   #hero .hero-img img {
     width: 70%;
+  }
+
+  h2 {
+    font-size: 25;
   }
 }
 
