update about us

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -564,6 +564,10 @@ section {
 /*--------------------------------------------------------------
 # About Us
 --------------------------------------------------------------*/
+
+.about .content {
+  font-size: 25px;
+}
 .about .content h3 {
   font-weight: 600;
   font-size: 26px;
